ajout des fichiers

--- a/Partager.html
+++ b/Partager.html
@@ -65,7 +65,7 @@
   <main>
     <div class="containe">
       <h1>Partager le lien du site</h1>
-      <input type="text" id="siteLink" value="https://gaeis-b2d93.web.app/" readonly>
+      <input type="text" id="siteLink" value="https://gaeisgeazz.github.io/gaeis/" readonly>
       <button onclick="copyLink()">Copier le lien</button>
     </div>
   </main>
