--- a/connexion.html
+++ b/connexion.html
@@ -19,7 +19,7 @@
                 <input type="password" id="password" placeholder="Mot de passe" required>
                 <button type="submit">Se connecter</button>
             </form>
-            <P>Je n'ai pas de compte.<a href="inscription.html">Inscrivez-vous</a> </P>
+            <P>Je n'ai pas de compte.<a href="index.html">Inscrivez-vous</a> </P>
         </div>
     </div>
 </body>
