--- a/bonus.html
+++ b/bonus.html
@@ -12,8 +12,8 @@
 
 <body>
     <div class="container">
-        <a href="deptrait1.html" class="return-button">Solde Basic</a>
-        <a href="deptrait2.html" class="return-button">Solde premieum</a>
+        <a href="depodraw1.html" class="return-button">Solde Basic</a>
+        <a href="depodraw2.html" class="return-button">Solde premieum</a>
         <h1>Bonus Quotidien</h1>
         <div style="display: flex; align-items: center; justify-content: center;">
             <div id="balance">Solde: 0</div>
