--- a/depodraw1.html
+++ b/depodraw1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plan basic</title>
-    <link rel="stylesheet" href="deptrait.css">
+    <link rel="stylesheet" href="depodraw.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="icon" type="image/png" href="img/logo.png">
 
@@ -50,18 +50,18 @@
     </div>
     <footer>
         <ul>
-            <li><a href="Accueil.html"><i class="fas fa-home"></i><span>Accueil</span></a></li>
-            <li><a href="Apropos.html"><i class="fas fa-info-circle"></i><span>À propos</span></a></li>
-            <li><a href="Partager.html"><i class="fas fa-share"></i><span>Partager</span></a></li>
-            <li><a href="contact.html"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
+          <li><a href="home.html"><i class="fas fa-home"></i><span>Accueil</span></a></li>
+          <li><a href="about.html"><i class="fas fa-info-circle"></i><span>À propos</span></a></li>
+          <li><a href="share.html"><i class="fas fa-share"></i><span>Partager</span></a></li>
+          <li><a href="contact.html"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
         </ul>
-    </footer>
+      </footer>
     <script>
         const username = localStorage.getItem('currentUsername');
         document.getElementById('username').textContent = username ? username : 'Invité';
     </script>
 
-    <script src="deptrait1.js"></script>
+    <script src="depodraw1.js"></script>
 
 </body>
 
