--- a/home.html
+++ b/home.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<!--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 -->
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page d'Accueil</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" type="image/png" href="img/logo.png">
 </head>
@@ -28,12 +27,12 @@
     <h1>Choisissez votre plan</h1>
     <p>Contenu principal de la page...</p>
     <div class="plans">
-      <a href="deptrait1.html"><button class="button-plan">PLAN BASIC</button></a>
-      <a href="deptrait2.html"><button class="button-plan">PLAN PREMIUM</button></a>
+      <a href="depodraw1.html"><button class="button-plan">PLAN BASIC</button></a>
+      <a href="depodraw2.html"><button class="button-plan">PLAN PREMIUM</button></a>
     </div>
   </main>
   <div class="submain">
-    <a href="infos.html"><button id="blinkButton">Cliquez-ici!</button></a>
+    <a href="knowing.html"><button id="blinkButton">Cliquez-ici!</button></a>
   </div>
   <style>
     #blinkButton {
@@ -72,9 +71,9 @@
   </style>
   <footer>
     <ul>
-      <li><a href="Accueil.html"><i class="fas fa-home"></i><span>Accueil</span></a></li>
-      <li><a href="Apropos.html"><i class="fas fa-info-circle"></i><span>À propos</span></a></li>
-      <li><a href="Partager.html"><i class="fas fa-share"></i><span>Partager</span></a></li>
+      <li><a href="home.html"><i class="fas fa-home"></i><span>Accueil</span></a></li>
+      <li><a href="about.html"><i class="fas fa-info-circle"></i><span>À propos</span></a></li>
+      <li><a href="share.html"><i class="fas fa-share"></i><span>Partager</span></a></li>
       <li><a href="contact.html"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
     </ul>
   </footer>
