--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulaire de connexion</title>
-    <link rel="stylesheet" href="inscrip-connect.css">
+    <link rel="stylesheet" href="signlogin.css">
     <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 
@@ -19,7 +19,7 @@
                 <input type="password" id="password" placeholder="Mot de passe" required>
                 <button type="submit">Se connecter</button>
             </form>
-            <P>Je n'ai pas de compte.<a href="index.html">Inscrivez-vous</a> </P>
+            <P>Je n'ai pas de compte.<a href="sign.html">Inscrivez-vous</a> </P>
         </div>
     </div>
 </body>
@@ -35,7 +35,7 @@
             // Sauvegarde du nom d'utilisateur dans le localStorage pour la session
             localStorage.setItem('currentUsername', username);
             // Redirection vers la page d'accueil
-            window.location.href = 'Accueil.html';
+            window.location.href = 'home.html';
         } else {
             alert('Nom d\'utilisateur ou mot de passe incorrect.');
         }
