--- a/share.html
+++ b/share.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Page de Partage</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="icon" type="image/png" href="img/logo.png">
 </head>
@@ -72,9 +72,9 @@
 
   <footer>
     <ul>
-      <li><a href="Accueil.html"><i class="fas fa-home"></i><span>Accueil</span></a></li>
-      <li><a href="Apropos.html"><i class="fas fa-info-circle"></i><span>À propos</span></a></li>
-      <li><a href="Partager.html"><i class="fas fa-share"></i><span>Partager</span></a></li>
+      <li><a href="home.html"><i class="fas fa-home"></i><span>Accueil</span></a></li>
+      <li><a href="about.html"><i class="fas fa-info-circle"></i><span>À propos</span></a></li>
+      <li><a href="share.html"><i class="fas fa-share"></i><span>Partager</span></a></li>
       <li><a href="contact.html"><i class="fas fa-envelope"></i><span>Contact</span></a></li>
     </ul>
   </footer>
