--- a/sign.html
+++ b/sign.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulaire d'inscription</title>
-    <link rel="stylesheet" href="inscrip-connect.css">
+    <link rel="stylesheet" href="signlogin.css">
     <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 
@@ -19,7 +19,7 @@
                 <input type="password" id="signupPassword" placeholder="Mot de passe" required>
                 <button type="submit">S'inscrire</button>
             </form>
-            <p>J'ai déja un compte. <a href="connexion.html">Connectez-vous</a> </p>
+            <p>J'ai déja un compte. <a href="login.html">Connectez-vous</a> </p>
         </div>
     </div>
     <script>
@@ -33,7 +33,7 @@
             localStorage.setItem('password', password);
 
             // Redirection vers le formulaire de connexion
-            window.location.href = 'connexion.html';
+            window.location.href = 'login.html';
         });
     </script>
 </body>
