--- a/share.html
+++ b/share.html
@@ -65,7 +65,7 @@
   <main>
     <div class="containe">
       <h1>Partager le lien du site</h1>
-      <input type="text" id="siteLink" value="https://gaeisgeazz.github.io/gaeis/" readonly>
+      <input type="text" id="siteLink" value="https://gaeisgeazz.github.io/vaeis/" readonly>
       <button onclick="copyLink()">Copier le lien</button>
     </div>
   </main>
