--- a/share.html
+++ b/share.html
@@ -22,44 +22,45 @@
     </header>
 
   <style>
-    .containe {
-      text-align: center;
-      padding: 20px;
-      border-radius: 10px;
-      background-color: #1e1e1e;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-      max-width: 90%;
-    }
+   .containe {
+    text-align: center;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 90%;
+}
 
+input {
+    width: 90%;
+    padding: 15px;
+    margin: 15px 0;
+    border: none;
+    border-radius: 12px;
+    background-color: #f0f0f0;
+    color: #333;
+}
+
+button {
+    padding: 15px 30px;
+    font-size: 16px;
+    color: #ffffff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
+
+@media (min-width: 600px) {
     input {
-      width: 90%;
-      padding: 15px;
-      margin: 15px 0;
-      border: none;
-      border-radius: 5px;
-      background-color: #333;
-      color: #fff;
-    }
-
-    button {
-      padding: 15px 30px;
-      font-size: 16px;
-      color: #fff;
-      background-color: #007bff;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background-color:#014ea1;
-    }
-
-    @media (min-width: 600px) {
-      input {
         width: 80%;
-      }
     }
+}
+
   </style>
 
   <main>
