--- a/knowing.html
+++ b/knowing.html
@@ -81,7 +81,7 @@
 
         <h4> 8. Réglement sur les retraits</h4>
 
-        Les retraits ne sont disponibles qu'après 20 jours à compter de la date de votre premier dépôt.
+        Les retraits ne sont disponibles qu'après 3 jours .
 
         Planifiez vos retraits en conséquence pour tirer le meilleur parti de vos investissements.
 
